# uzume_utau

./: Affix.cpp  Affix.hpp  CMakeLists.txt  Character.cpp  Character.hpp  README.md  Voicebank.cpp  Voicebank.hpp  WaveLabel.cpp  WaveLabel.hpp  main.cpp.sample
